syntax = "proto3";

package pb;

message PlainResponse {
}

message BytesResponse {
  bytes data = 1;
}

message StringResponse {
  string data = 1;
}